*** empty log message ***

--- a/doc/gl2ps.tex
+++ b/doc/gl2ps.tex
@@ -2,7 +2,7 @@
 %  GL2PS, an OpenGL to Postscript Printing Library, version 0.32
 %  Copyright (C) 1999-2000  Christophe Geuzaine 
 %
-%  Last Mod by Christophe on Mon Aug 14 23:50:19 2000
+%  $Id: gl2ps.tex,v 1.2 2001-05-23 14:14:24 geuzaine Exp $
 % 
 %  E-mail: Christophe.Geuzaine@advalvas.be
 %  URL: http://www.geuz.org/gl2ps/
@@ -289,7 +289,7 @@ allocation stuff. First version of this user's guide.
 \item[0.21] Initialization fixes.
 \item[0.3] Code cleaning. Added \dd{GL2PS_LINE_STIPPLE}.
 \item[0.31] Better handling of erroneous primitives.
-\item[0.32] ...
+\item[0.32] Fixed memory leaks, thanks to Bart Kaptein <B.L.Kaptein@lumc.nl>
 % Occlusion culling.
 \end{description}
 
