--- a/doc/gl2ps.tex
+++ b/doc/gl2ps.tex
@@ -2,7 +2,7 @@
 %  GL2PS, an OpenGL to Postscript Printing Library, version 0.32
 %  Copyright (C) 1999-2000  Christophe Geuzaine 
 %
-%  $Id: gl2ps.tex,v 1.2 2001-05-23 14:14:24 geuzaine Exp $
+%  $Id: gl2ps.tex,v 1.3 2001-05-23 14:59:01 geuzaine Exp $
 % 
 %  E-mail: Christophe.Geuzaine@advalvas.be
 %  URL: http://www.geuz.org/gl2ps/
@@ -48,7 +48,7 @@
 
 \title{GL2PS, an OpenGL to Postscript Printing Library}
 \author{Christophe Geuzaine}
-\date{Version 0.32, 13 November 2000}
+\date{Version 0.32, 23 May 2001}
 
 \maketitle
 
@@ -272,7 +272,8 @@ the original list code;
 %Bruce Naylor (\email{naylor@comp-graphics.com}) for some BSP tree and occlusion
 %culling hints;
 Jean-Fran\c{c}ois Remacle (\email{remacle@scorec.rpi.edu}) for plane equation
-fixes.
+fixes;
+Bart Kaptein (\email{B.L.Kaptein@lumc.nl}) for memory leaks fixes.
 
 Projects similar to \dd{GL2PS} include: Michael Sweet's GLP library
 (\url{http://dns.easysw.com/~mike/opengl/index.html}); Mark J. Kilgard's
@@ -289,7 +290,7 @@ allocation stuff. First version of this user's guide.
 \item[0.21] Initialization fixes.
 \item[0.3] Code cleaning. Added \dd{GL2PS_LINE_STIPPLE}.
 \item[0.31] Better handling of erroneous primitives.
-\item[0.32] Fixed memory leaks, thanks to Bart Kaptein <B.L.Kaptein@lumc.nl>
+\item[0.32] Fixed memory leaks. 
 % Occlusion culling.
 \end{description}
 
