*** empty log message ***

--- a/doc/gl2ps.tex
+++ b/doc/gl2ps.tex
@@ -2,7 +2,7 @@
 %  GL2PS, an OpenGL to Postscript Printing Library
 %  Copyright (C) 1999-2001  Christophe Geuzaine 
 %
-%  $Id: gl2ps.tex,v 1.6 2001-06-11 11:26:14 geuzaine Exp $
+%  $Id: gl2ps.tex,v 1.7 2001-06-11 11:31:56 geuzaine Exp $
 % 
 %  E-mail: Christophe.Geuzaine@advalvas.be
 %  URL: http://www.geuz.org/gl2ps/
@@ -217,15 +217,15 @@ mode is applied. These modes are:
 
 
 \begin{description}
-\item[\dd{GL2PS_POLYGON_OFFSET_FILL}] Tries to mimic the
+\item[\dd{GL2PS_POLYGON_OFFSET_FILL}] Tries to emulate the
 \dd{GL_POLYGON_OFFSET_FILL} functionnality. The value of the offset is taken as
 the current value of the corresponding OpenGL offset (set with
 \dd{glPolygonOffset}). Not fully functionnal yet.
 
 \item[\dd{GL2PS_POLYGON_BOUNDARY}] Not implemented yet.
 
-\item[\dd{GL2PS_LINE_STIPPLE}] Tries to mimic the
-\dd{GL_LINE_STIPPLE} functionnality.
+\item[\dd{GL2PS_LINE_STIPPLE}] Tries to emulate the \dd{GL_LINE_STIPPLE}
+functionnality.
 \end{description}
 
 \subsection{\texttt{gl2psPointSize} and \texttt{gl2psLineWidth}}
@@ -249,9 +249,10 @@ void gl2psLineWidth( GLint value )
 
 \subsubsection{Description}
 
-\dd{gl2psPointSize} and \dd{gl2psLineSize} mimic the \dd{glPointSize} and
-the \dd{glLineWidth} functions. These functions are necessary since the
-point sizes and line widths are not saved in the OpenGL feedback buffer.
+\dd{gl2psPointSize} and \dd{gl2psLineSize} emulate the standard
+\dd{glPointSize} and the \dd{glLineWidth} functions. They are necessary
+since the point sizes and line widths are not saved in the OpenGL feedback
+buffer.
 
 \section{Example}
 
@@ -316,7 +317,7 @@ allocation stuff. First version of this user's guide.
 \item[0.31] Better handling of erroneous primitives.
 \item[0.32] Fixed memory leaks. 
 \item[0.33] Added \dd{gl2psPointSize} and \dd{gl2psLineWidth}. Some code
-cleaning to allow easier generation of other vector file formats than
+cleaning to allow easier generation of vector file formats other than
 postscript.
 % Occlusion culling.
 \end{description}
