added version dates

--- a/doc/gl2ps.tex
+++ b/doc/gl2ps.tex
@@ -2,7 +2,7 @@
 %  GL2PS, an OpenGL to Postscript Printing Library
 %  Copyright (C) 1999-2001  Christophe Geuzaine 
 %
-%  $Id: gl2ps.tex,v 1.7 2001-06-11 11:31:56 geuzaine Exp $
+%  $Id: gl2ps.tex,v 1.8 2001-06-12 07:02:05 geuzaine Exp $
 % 
 %  E-mail: Christophe.Geuzaine@advalvas.be
 %  URL: http://www.geuz.org/gl2ps/
@@ -308,17 +308,18 @@ GLpr library from CEI international (\url{http://www.ceintl.com/}).
 \section{Versions}
 
 \begin{description}
-\item[0.1] First distributed version.
-\item[0.2] Added \dd{GL2PS_POLYGON_BOUNDARY} and \dd{GL2PS_BEST_ROOT}. Changed
-arguments of \dd{gl2psBeginPage} and \dd{gl2psText}. Corrected some memory
-allocation stuff. First version of this user's guide.
-\item[0.21] Initialization fixes.
-\item[0.3] Code cleaning. Added \dd{GL2PS_LINE_STIPPLE}.
-\item[0.31] Better handling of erroneous primitives.
-\item[0.32] Fixed memory leaks. 
-\item[0.33] Added \dd{gl2psPointSize} and \dd{gl2psLineWidth}. Some code
-cleaning to allow easier generation of vector file formats other than
-postscript.
+\item[0.1 (Feb 12, 2000)] First distributed version.
+\item[0.2 (Feb 20, 2000)] Added \dd{GL2PS_POLYGON_BOUNDARY} and
+\dd{GL2PS_BEST_ROOT}. Changed arguments of \dd{gl2psBeginPage} and
+\dd{gl2psText}. Corrected some memory allocation stuff. First version of
+this user's guide.
+\item[0.21 (Mar 16, 2000)] Initialization fixes.
+\item[0.3 (Jul 29, 2000)] Code cleaning. Added \dd{GL2PS_LINE_STIPPLE}.
+\item[0.31 (Aug 14, 2000)] Better handling of erroneous primitives.
+\item[0.32 (May 23, 2001)] Fixed memory leaks.
+\item[0.33 (Jun 12, 2001)] Added \dd{gl2psPointSize} and
+\dd{gl2psLineWidth}. Some code cleaning to allow easier generation of vector
+file formats other than postscript.
 % Occlusion culling.
 \end{description}
 
