*** empty log message ***

--- a/doc/gl2ps.tex
+++ b/doc/gl2ps.tex
@@ -2,7 +2,7 @@
 %  GL2PS, an OpenGL to Postscript Printing Library
 %  Copyright (C) 1999-2001  Christophe Geuzaine 
 %
-%  $Id: gl2ps.tex,v 1.10 2001-06-12 08:45:35 geuzaine Exp $
+%  $Id: gl2ps.tex,v 1.11 2001-06-12 08:48:03 geuzaine Exp $
 % 
 %  E-mail: Christophe.Geuzaine@advalvas.be
 %  URL: http://www.geuz.org/gl2ps/
@@ -234,11 +234,11 @@ functionnality.
 \subsubsection{Specification}
 
 \begin{verbatim}
-void gl2psPointSize( GLint value )
+void gl2psPointSize( GLfloat value )
 \end{verbatim}
 
 \begin{verbatim}
-void gl2psLineWidth( GLint value )
+void gl2psLineWidth( GLfloat value )
 \end{verbatim}
 
 \subsubsection{Parameters}
