--- a/doc/gl2ps.tex
+++ b/doc/gl2ps.tex
@@ -2,7 +2,7 @@
 %  GL2PS, an OpenGL to Postscript Printing Library
 %  Copyright (C) 1999-2001  Christophe Geuzaine 
 %
-%  $Id: gl2ps.tex,v 1.11 2001-06-12 08:48:03 geuzaine Exp $
+%  $Id: gl2ps.tex,v 1.12 2001-08-06 12:22:19 geuzaine Exp $
 % 
 %  E-mail: Christophe.Geuzaine@advalvas.be
 %  URL: http://www.geuz.org/gl2ps/
@@ -48,13 +48,13 @@
 
 \title{GL2PS, an OpenGL to Postscript Printing Library}
 \author{Christophe Geuzaine}
-\date{Version 0.4, 12 June 2001}
+\date{Version 0.41, 6 August 2001}
 
 \maketitle
 
 %%tth:\section*{Download}
 %%tth:The current archive of the package is available
-%%tth:\href{http://www.geuz.org/gl2ps/gl2ps-0.4.tar.gz}{here}.
+%%tth:\href{http://www.geuz.org/gl2ps/gl2ps-0.41.tar.gz}{here}.
 
 \tableofcontents
 
@@ -320,6 +320,8 @@ this user's guide.
 \item[0.4 (Jun 12, 2001)] Added \dd{gl2psPointSize} and
 \dd{gl2psLineWidth}. Some code cleaning to allow easier generation of vector
 file formats other than postscript.
+\item[0.41 (August 6, 2001)] Fixed string allocation (1 char too
+short). Set smaller default line width.
 % Occlusion culling.
 \end{description}
 
