--- a/doc/gl2ps.tex
+++ b/doc/gl2ps.tex
@@ -2,7 +2,7 @@
 %  GL2PS, an OpenGL to Postscript Printing Library
 %  Copyright (C) 1999-2001  Christophe Geuzaine 
 %
-%  $Id: gl2ps.tex,v 1.14 2001-09-13 07:55:24 geuzaine Exp $
+%  $Id: gl2ps.tex,v 1.15 2001-10-08 21:36:01 geuzaine Exp $
 % 
 %  E-mail: Christophe.Geuzaine@advalvas.be
 %  URL: http://www.geuz.org/gl2ps/
@@ -51,15 +51,15 @@
 
 \title{GL2PS, an OpenGL to Postscript Printing Library}
 \author{Christophe Geuzaine}
-\date{Version 0.41, 6 August 2001}
+\date{Version 0.42, 8 October 2001}
 
 \maketitle
 
 %%tth: \section*{Download}
 %%tth: The current distribution of GL2PS is available either as a
-%%tth: \href{http://www.geuz.org/gl2ps/gl2ps-0.41.tar.gz}{tar.gz}
+%%tth: \href{http://www.geuz.org/gl2ps/gl2ps-0.42.tar.gz}{tar.gz}
 %%tth: or as a 
-%%tth: \href{http://www.geuz.org/gl2ps/gl2ps-0.41.zip}{zip}
+%%tth: \href{http://www.geuz.org/gl2ps/gl2ps-0.42.zip}{zip}
 %%tth: archive. These archives contain both a
 %%tth: \href{http://www.geuz.org/gl2ps/gl2ps.ps}{postscript}
 %%tth: and a
@@ -302,14 +302,16 @@ gl2psText("MyText", "Courier", 12);
 
 \section{Contributors}
 
-Michael Sweet (\email{mike@easysw.com}) for the original implementation of the
-feedback buffer parser; Marc Um{\'e} (\email{marc.ume@digitalgraphics.be}) for
-the original list code;
+Michael Sweet (\email{mike@easysw.com}) for the original implementation of
+the feedback buffer parser; Marc Um{\'e}
+(\email{marc.ume@digitalgraphics.be}) for the original list code;
+Jean-Fran\c{c}ois Remacle (\email{remacle@scorec.rpi.edu}) for plane
+equation fixes; Bart Kaptein (\email{B.L.Kaptein@lumc.nl}) for memory leak
+fixes; Quy Nguyen-Dai (\email{quy@vnilux.com}) for output file size
+optimization.
+
 %Bruce Naylor (\email{naylor@comp-graphics.com}) for some BSP tree and occlusion
 %culling hints;
-Jean-Fran\c{c}ois Remacle (\email{remacle@scorec.rpi.edu}) for plane equation
-fixes;
-Bart Kaptein (\email{B.L.Kaptein@lumc.nl}) for memory leaks fixes.
 
 Projects similar to \dd{GL2PS} include: Michael Sweet's GLP library
 (\url{http://dns.easysw.com/~mike/opengl/index.html}); Mark J. Kilgard's
@@ -333,6 +335,8 @@ this user's guide.
 file formats other than postscript.
 \item[0.41] (Aug 6, 2001) Fixed string allocation (1 char too
 short). Set smaller default line width.
+\item[0.42] (Oct 8, 2001) Optimization of output file size. Postscript
+header cleaning. Better line width computation.
 \end{description}
 
 % Occlusion culling... In version 9.99? :-(
