--- a/doc/gl2ps.tex
+++ b/doc/gl2ps.tex
@@ -2,7 +2,7 @@
 %  GL2PS, an OpenGL to Postscript Printing Library
 %  Copyright (C) 1999-2001  Christophe Geuzaine 
 %
-%  $Id: gl2ps.tex,v 1.15 2001-10-08 21:36:01 geuzaine Exp $
+%  $Id: gl2ps.tex,v 1.16 2001-10-12 17:37:11 geuzaine Exp $
 % 
 %  E-mail: Christophe.Geuzaine@advalvas.be
 %  URL: http://www.geuz.org/gl2ps/
@@ -47,6 +47,7 @@
 
 \begin{document}
 
+%%tth: \special{html:<LINK href="/general.css" rel="stylesheet">}
 %%tth: \special{html:<BODY TEXT="#000000" BGCOLOR="#ffffff">}
 
 \title{GL2PS, an OpenGL to Postscript Printing Library}
