--- a/doc/gl2ps.tex
+++ b/doc/gl2ps.tex
@@ -2,7 +2,7 @@
 %  GL2PS, an OpenGL to Postscript Printing Library
 %  Copyright (C) 1999-2001  Christophe Geuzaine 
 %
-%  $Id: gl2ps.tex,v 1.17 2001-10-12 17:49:00 geuzaine Exp $
+%  $Id: gl2ps.tex,v 1.18 2001-10-12 17:53:10 geuzaine Exp $
 % 
 %  E-mail: Christophe.Geuzaine@advalvas.be
 %  URL: http://www.geuz.org/gl2ps/
@@ -48,6 +48,7 @@
 \begin{document}
 
 %%tth: \special{html:<LINK href="/general.css" rel="stylesheet">}
+%%tth: \special{html:<BODY>}
 
 \title{GL2PS, an OpenGL to Postscript Printing Library}
 \author{Christophe Geuzaine}
