*** empty log message ***

--- a/doc/gl2ps.tex
+++ b/doc/gl2ps.tex
@@ -2,7 +2,7 @@
 %  GL2PS, an OpenGL to Postscript Printing Library
 %  Copyright (C) 1999-2001  Christophe Geuzaine 
 %
-%  $Id: gl2ps.tex,v 1.19 2001-10-14 12:49:25 geuzaine Exp $
+%  $Id: gl2ps.tex,v 1.20 2001-10-15 07:18:50 geuzaine Exp $
 % 
 %  E-mail: Christophe.Geuzaine@advalvas.be
 %  URL: http://www.geuz.org/gl2ps/
@@ -32,7 +32,7 @@
 \else
   \usepackage[colorlinks=true,urlcolor=blue]{hyperref}
   \pdfinfo{
-    /Title (GL2PS, an OpenGL to Postscript Printing Library)
+    /Title (GL2PS: an OpenGL to Postscript printing library)
     /Author (Christophe Geuzaine)
     /Subject (Documentation)
     /Keywords (OpenGL, Postscript, Printing)
@@ -47,7 +47,7 @@
 
 \begin{document}
 
-\title{GL2PS, an OpenGL to Postscript Printing Library}
+\title{GL2PS: an OpenGL to Postscript printing library}
 \author{Christophe Geuzaine}
 \date{Version 0.42, 8 October 2001}
 
