--- a/doc/gl2ps.tex
+++ b/doc/gl2ps.tex
@@ -2,7 +2,7 @@
 %  GL2PS, an OpenGL to Postscript Printing Library
 %  Copyright (C) 1999-2001  Christophe Geuzaine 
 %
-%  $Id: gl2ps.tex,v 1.20 2001-10-15 07:18:50 geuzaine Exp $
+%  $Id: gl2ps.tex,v 1.21 2001-10-31 10:55:37 geuzaine Exp $
 % 
 %  E-mail: Christophe.Geuzaine@advalvas.be
 %  URL: http://www.geuz.org/gl2ps/
@@ -49,15 +49,15 @@
 
 \title{GL2PS: an OpenGL to Postscript printing library}
 \author{Christophe Geuzaine}
-\date{Version 0.42, 8 October 2001}
+\date{Version 0.43, 31 October 2001}
 
 \maketitle
 
 %%tth: \section*{Download}
 %%tth: The current distribution of GL2PS is available either as a
-%%tth: \href{http://www.geuz.org/gl2ps/gl2ps-0.42.tar.gz}{tar.gz}
+%%tth: \href{http://www.geuz.org/gl2ps/gl2ps-0.43.tar.gz}{tar.gz}
 %%tth: or as a 
-%%tth: \href{http://www.geuz.org/gl2ps/gl2ps-0.42.zip}{zip}
+%%tth: \href{http://www.geuz.org/gl2ps/gl2ps-0.43.zip}{zip}
 %%tth: archive. These archives contain both a
 %%tth: \href{http://www.geuz.org/gl2ps/gl2ps.ps}{postscript}
 %%tth: and a
@@ -306,7 +306,8 @@ the feedback buffer parser; Marc Um{\'e}
 Jean-Fran\c{c}ois Remacle (\email{remacle@scorec.rpi.edu}) for plane
 equation fixes; Bart Kaptein (\email{B.L.Kaptein@lumc.nl}) for memory leak
 fixes; Quy Nguyen-Dai (\email{quy@vnilux.com}) for output file size
-optimization.
+optimization; Sam Buss (\email{sbuss@ucsd.edu}) for the smooth shaded
+triangle code.
 
 %Bruce Naylor (\email{naylor@comp-graphics.com}) for some BSP tree and occlusion
 %culling hints;
@@ -335,6 +336,7 @@ file formats other than postscript.
 short). Set smaller default line width.
 \item[0.42] (Oct 8, 2001) Optimization of output file size. Postscript
 header cleaning. Better line width computation.
+\item[0.43] (Oct 31, 2001) Better support of smooth shaded primitives.
 \end{description}
 
 % Occlusion culling... In version 9.99? :-(
