--- a/doc/gl2ps.tex
+++ b/doc/gl2ps.tex
@@ -2,7 +2,7 @@
 %  GL2PS, an OpenGL to PostScript Printing Library
 %  Copyright (C) 1999-2001  Christophe Geuzaine 
 %
-%  $Id: gl2ps.tex,v 1.23 2001-11-19 11:02:11 geuzaine Exp $
+%  $Id: gl2ps.tex,v 1.24 2001-11-19 11:15:30 geuzaine Exp $
 % 
 %  E-mail: Christophe.Geuzaine@advalvas.be
 %  URL: http://www.geuz.org/gl2ps/
@@ -352,7 +352,8 @@ short). Set smaller default line width.
 header cleaning. Better line width computation.
 \item[0.5] (Nov 19, 2001) New \dd{format} and \dd{filename} arguments for
 \dd{gl2psBeginPage}. Better PostScript handling of smooth shaded
-primitives. New options for LaTeX output.
+primitives. Fix handling of zero-length strings. New options for LaTeX
+output.
 \end{description}
 
 % Occlusion culling... In version 9.99? :-(
