--- a/doc/gl2ps.tex
+++ b/doc/gl2ps.tex
@@ -2,7 +2,7 @@
 %  GL2PS, an OpenGL to PostScript Printing Library
 %  Copyright (C) 1999-2001  Christophe Geuzaine 
 %
-%  $Id: gl2ps.tex,v 1.26 2001-11-20 08:06:16 geuzaine Exp $
+%  $Id: gl2ps.tex,v 1.27 2001-11-20 08:52:04 geuzaine Exp $
 % 
 %  E-mail: Christophe.Geuzaine@advalvas.be
 %  URL: http://www.geuz.org/gl2ps/
@@ -61,7 +61,7 @@
 %%tth: archive. These archives contain both a
 %%tth: \href{http://www.geuz.org/gl2ps/gl2ps.ps}{PostScript}
 %%tth: and a
-%%tth: \href{http://www.geuz.org/gl2ps/gl2ps.pdf}{pdf}
+%%tth: \href{http://www.geuz.org/gl2ps/gl2ps.pdf}{PDF}
 %%tth: version of the documentation.
 
 \tableofcontents
