--- a/doc/gl2ps.tex
+++ b/doc/gl2ps.tex
@@ -1,10 +1,10 @@
 %
 %  GL2PS, an OpenGL to PostScript Printing Library
-%  Copyright (C) 1999-2001  Christophe Geuzaine 
+%  Copyright (C) 1999-2002  Christophe Geuzaine 
 %
-%  $Id: gl2ps.tex,v 1.27 2001-11-20 08:52:04 geuzaine Exp $
+%  $Id: gl2ps.tex,v 1.28 2002-01-19 00:07:08 geuzaine Exp $
 % 
-%  E-mail: Christophe.Geuzaine@advalvas.be
+%  E-mail: geuz@geuz.org
 %  URL: http://www.geuz.org/gl2ps/
 % 
 %  This library is free software; you can redistribute it and/or
@@ -78,7 +78,7 @@ stretched polygons, as well as non manifold objects.
 The library, written in C, is released under GNU Library General Public
 License (see \url{http://www.gnu.org/} for more details), and is available
 at \url{http://www.geuz.org/gl2ps/}. Any corrections, questions or
-suggestions should be e-mailed to \email{Christophe.Geuzaine@advalvas.be}.
+suggestions should be e-mailed to \email{geuz@geuz.org}.
 
 The interface consists of seven functions, all beginning with the prefix
 \dd{gl2ps}. All the data structures and the symbolic constants peculiar to
